--- a/package.json
+++ b/package.json
@@ -1,79 +1,81 @@
 {
-    "name": "vscode-add-nativescript-files",
-    "displayName": "Add NativeScript Files",
-    "description": "Add NativeScript files to your Visual Studio Code project",
-    "version": "1.0.0",
-    "icon": "images/icon.png",
-    "publisher": "alexrainman",
-    "license": "MIT",
-    "author": {
-        "name": "Alex Rainman"
-    },
-    "keywords": [
-        "NativeScript",
-        "TypeScript",
-        "Add files"
+  "name": "vscode-add-nativescript-files",
+  "displayName": "Add NativeScript Files",
+  "description": "Add NativeScript files including snippets to your Visual Studio Code project",
+  "version": "1.0.1",
+  "icon": "images/icon.png",
+  "publisher": "alexrainman",
+  "license": "MIT",
+  "author": {
+    "name": "Alex Rainman"
+  },
+  "keywords": [
+    "NativeScript",
+    "TypeScript",
+    "Add files"
+  ],
+  "engines": {
+    "vscode": "^1.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexrainman/vscode-add-nativescript-files"
+  },
+  "bugs": {
+    "url": "https://github.com/alexrainman/vscode-add-nativescript-files/issues"
+  },
+  "categories": [
+    "Other",
+    "Languages",
+    "Snippets"
+  ],
+  "scripts": {
+    "vscode:prepublish": "tsc -p ./",
+    "compile": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install"
+  },
+  "activationEvents": [
+    "*"
+  ],
+  "main": "./out/src/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "extension.addPage",
+        "title": "Add NativeScript Page"
+      },
+      {
+        "command": "extension.addComponent",
+        "title": "Add NativeScript Component"
+      }
     ],
-    "engines": {
-        "vscode": "^1.12.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/alexrainman/vscode-add-nativescript-files"
-    },
-    "bugs": {
-        "url": "https://github.com/alexrainman/vscode-add-nativescript-files/issues"
-    },
-    "categories": [
-        "Other",
-        "Languages",
-        "Snippets"
-    ],
-    "activationEvents": [
-        "*"
-    ],
-    "main": "./out/src/extension",
-    "contributes": {
-        "commands": [
-            {
-                "command": "extension.addPage",
-                "title": "Add Page"
-            },
-            {
-                "command": "extension.addComponent",
-                "title": "Add Component"
-            }
-        ],
-        "menus": {
-            "explorer/context": [
-                {
-                    "when": "",
-                    "command": "extension.addPage",
-                    "group": "Add Files"
-                },
-                {
-                    "when": "",
-                    "command": "extension.addComponent",
-                    "group": "Add Files"
-                }
-            ]
+    "menus": {
+      "explorer/context": [
+        {
+          "when": "",
+          "command": "extension.addPage",
+          "group": "Add Files"
+        },
+        {
+          "when": "",
+          "command": "extension.addComponent",
+          "group": "Add Files"
         }
-    },
-    "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
-        "@types/node": "^6.0.40",
-        "@types/mocha": "^2.2.32"
-    },
-    "dependencies": {
-        "q": "^1.5.0",
-        "path": "^0.12.7"
+      ]
     }
+  },
+  "devDependencies": {
+    "typescript": "^2.0.3",
+    "vscode": "^1.1.0",
+    "rimraf": "2.6.1",
+    "mocha": "^2.3.3",
+    "@types/node": "^6.0.40",
+    "@types/mocha": "^2.2.32",
+    "@types/q": "^1.0.0",
+    "@types/rimraf": "0.0.28"
+  },
+  "dependencies": {
+    "q": "^1.4.1",
+    "path": "^0.12.7"
+  }
 }
